Fix missing extendedContent, style TiptapEditor for dark mode

--- a/src/components/CommentInput/CommentInput.module.scss
+++ b/src/components/CommentInput/CommentInput.module.scss
@@ -21,4 +21,11 @@
       font-size: 0.75rem;
     }
   }
+
+  &.dark {
+    .submitButton {
+      background-color: $blue-800;
+      color: $gray-200;
+    }
+  }
 }
